feat: Check username not already exists and make it immutable